--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Jesse's awesome website</title>
+		<title>soy jesse is soy mallon</title>
 	</head>
 		<h1 style="background-color: white">
 	<span style="color:#f00">J</span>
