Callate Los ojos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>soy jesse is soy mallon</title>
+		<title>Jesse's Website</title>
 	</head>
 		<h1 style="background-color: white">
 	<span style="color:#f00">J</span>
@@ -32,6 +32,13 @@
 		<p style="font-family: Comic Sans MS"> This is how you become an admin on this website</p>
 		<iframe src="https://www.youtube.com/watch?v=4U7889m9RJE"
    width="560" height="315" frameborder="0" allowfullscreen></iframe>
+       <p id="jukeboxtitle">Litty</p>
+   <p>
+
+     <br/>
+<marquee id="swagmessage">Is this <strong>Callate</strong>Los<em>Ojos<em></marquee>
+  <br/>
+    </p>
 <p> </p>
 <picture>
             <source srcset=http://bit.ly/2buImj4 media="(max-width: 800px)" >
@@ -39,13 +46,8 @@
             <img src=http://bit.ly/2buImj4 alt="World Map">
 </picture>
 
-
-
-
 Choose a color to color the below text <input id="color_picker" type="color" onchange="showHex();"> <span id="color_hex_value"></span>
     <h1 style="font-family: Comic Sans MS; font-size: 50px">Litty!</h1>
-
-
 
 
     Select your most favorite brand :
