Added rainbow words

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Jesse's Website</title>
 	</head>
+	  <link rel="stylesheet" type="text/css" href="style.css">
 		<h1 style="background-color: white">
 	<span style="color:#f00">J</span>
 	<span style="color:#f50">e</span>
