Improved the messeges.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <p>
 
      <br/>
-<marquee id="swagmessage">Is this <strong>Callate</strong>Los<em>Ojos<em></marquee>
+<marquee id="swagmessage">Callate...<strong>Los...</strong>Ojos<em>Cabron<em></marquee>
   <br/>
     </p>
 <p> </p>
@@ -48,7 +48,7 @@
 </picture>
 
 Choose a color to color the below text <input id="color_picker" type="color" onchange="showHex();"> <span id="color_hex_value"></span>
-    <h1 style="font-family: Comic Sans MS; font-size: 50px">Litty!</h1>
+    <h1 style="font-family: Comic Sans MS; font-size: 80px">Litty!</h1>
 
 
     Select your most favorite brand :
