--- a/index.html
+++ b/index.html
@@ -39,16 +39,12 @@
      <br/>
 <marquee id="swagmessage">Callate...<strong>Los...</strong>Ojos<em>Cabron<em></marquee>
   <br/>
-    </p>
-<p> </p>
-<picture>
-            <source srcset=http://bit.ly/2buImj4 media="(max-width: 800px)" >
-            <source srcset=http://bit.ly/2b65YLu media="(min-width: 900px)" >
-            <img src=http://bit.ly/2buImj4 alt="World Map">
-</picture>
 
-Choose a color to color the below text <input id="color_picker" type="color" onchange="showHex();"> <span id="color_hex_value"></span>
-    <h1 style="font-family: Comic Sans MS; font-size: 80px">Litty!</h1>
+
+	    Type your most favourite text editor: <input type="text" list="text_editors">
+	    <datalist id="text_editors">
+	      <option value="Atom"></option>
+
 
 
     Select your most favorite brand :
