Added More Stuff

--- a/index.html
+++ b/index.html
@@ -37,21 +37,13 @@
    <p>
 
      <br/>
-<marquee id="swagmessage">Callate...<strong>Los...</strong>Ojos<em>Cabron<em></marquee>
+<marquee id="swagmessage">Callate...<strong>Los...</strong>Ojos...<em>Cabron<em></marquee>
   <br/>
 </p>
 <p>
 	    Type your most favourite Person: <input type="text" list="text_editors">
 	    <datalist id="text_editors">
-	      <option value="">Elemr</option>
-				<option value="">Jose</option>
-				<option value="">Jesse</option>
-				<option value="">Eric</option>
-				<option value="">Andrea</option>
-				<option value="">Fabio</option>
-				<option value="">Gina</option>
-				<option value="">Moises</option>
-				<option value="">Andres</option>
+
 </p>
     Select your most favorite brand :
     <select>
