--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         <option value="">Armani</option>
         <option value="">Express</option>
     </optgroup>
-
+<p>
+<img src="http://giphy.com/gifs/trippy-abstract-illusion-3o7TKUfKeHBXXxAZtS">
+</p>
 	    </body>
+<p>
+<div class="element"></div>
+</p>
 
 </html>
