--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <br/>
 </p>
 <p>
-	    Type your most favourite Person: <input type="text" list="text_editors">
+	    Type your most favorite Person: <input type="text" list="text_editors">
 	    <datalist id="text_editors">
 
 </p>
@@ -57,6 +57,11 @@
         <option value="">Armani</option>
         <option value="">Express</option>
     </optgroup>
+
+
+		<div id ="myContainer">
+		    <div id ="myAnimation">My animation will go here</div>
+		</div>
 
 	    </body>
 
