Deleted animation and added trippy Gif

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
         <option value="">Express</option>
     </optgroup>
 
-
-		<div id ="myContainer">
-		    <div id ="myAnimation">My animation will go here</div>
-		</div>
+<p>
+<img src="Trippy.gif"
+</p>
 
 	    </body>
 
