--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<p id="jukeboxtitle" style="font-family: Comic Sans MS; font-size: 80px"> This is how you become an admin on this website</p>
 		<iframe src="Admin_Video.mp4"
    width="560" height="315" frameborder="0" allowfullscreen></iframe>
+	 <img src="palm_tress">
        <p id="jukeboxtitle">Litty</p>
    <p>
 
