--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p id="jukeboxtitle" style="font-family: Comic Sans MS; font-size: 80px"> This is how you become an admin on this website</p>
 		<iframe src="Admin_Video.mp4"
    width="560" height="315" frameborder="0" allowfullscreen></iframe>
-	 <img src="palm_tree">
+	 <img src="http://orig11.deviantart.net/1edd/f/2014/096/3/0/palm_tree_bent0001_0100_by_zectric-d7dd078.gif">
        <p id="jukeboxtitle">Litty</p>
    <p>
 
