--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <option value="">Armani</option>
         <option value="">Express</option>
     </optgroup>
+		<div class="span3 wow flipInX center"><img src="img/wow.gif" height="200"></div>
+<div class="span3 wow bounceInRight">
+	<p class="circle bg-purple">many anims	</p>
+</div>
 
 
 	    </body>
