added litty stuff!!!!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>Jesse's Website</title>
 	</head>
 	  <link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="animate.css"
+		<link rel="stylesheet" type="text/css" href="animate.css">
+
 		<h1 style="background-color: white">
 	<span style="color:#f00">J</span>
 	<span style="color:#f50">e</span>
@@ -39,7 +40,6 @@
 	 <img src="http://orig11.deviantart.net/1edd/f/2014/096/3/0/palm_tree_bent0001_0100_by_zectric-d7dd078.gif">
        <p id="jukeboxtitle">Litty</p>
    <p>
-
      <br/>
 <marquee id="swagmessage">Callate...<strong>Los...</strong>Ojos...<em>Cabron<em></marquee>
   <br/>
@@ -47,11 +47,9 @@
 <p>
 	    Type your most favorite Person: <input type="text" list="text_editors">
 	    <datalist id="text_editors">
-
 </p>
     Select your most favorite brand :
     <select>
-
     <option value="">Select an option</option>
     <optgroup label="Brands">
         <option value="">Adidas</option>
@@ -65,8 +63,5 @@
 <div class="span3 wow bounceInRight">
 	<p class="circle bg-purple">many anims	</p>
 </div>
-
-
 	    </body>
-
 </html>
