--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	  <link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="animate.css">
+		<script src="proxessing.min.js" type="text/javascript"></script>
 
 		<h1 style="background-color: white">
 	<span style="color:#f00">J</span>
