--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="span3 wow bounceInRight">
 	<p class="circle bg-purple">many anims	</p>
 </div>
-<canvas data-processing-sources="sketch.pde"</canvas>
+<canvas data-processing-sources="sketch.pde"></canvas>
 
 	    </body>
 </html>
